// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should properly render 1`] = `
.c0 {
  min-width: 16.5rem;
  width: auto;
  height: 5rem;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 5rem;
  padding: 0 3.5rem 0 3.5rem;
  font-size: 1.5rem;
  background-color: black;
  color: white;
  text-transform: uppercase;
  font-family: 'Open Sans Condensed';
  font-weight: bolder;
  cursor: pointer;
  border: none;
}

.c0:hover {
  background-color: white;
  color: black;
  border: 1px solid black;
}

<button
  class="c0"
>
  Test1
</button>
`;

exports[`should properly render google button 1`] = `
.c0 {
  min-width: 16.5rem;
  width: auto;
  height: 5rem;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 5rem;
  padding: 0 3.5rem 0 3.5rem;
  font-size: 1.5rem;
  background-color: black;
  color: white;
  text-transform: uppercase;
  font-family: 'Open Sans Condensed';
  font-weight: bolder;
  cursor: pointer;
  border: none;
  background-color: #4285f4;
  color: white;
}

.c0:hover {
  background-color: white;
  color: black;
  border: 1px solid black;
}

.c0:hover {
  background: #357ae8;
  border: none;
  color: white;
}

<button
  class="c0"
>
  Test1
</button>
`;

exports[`should properly render inverse button 1`] = `
.c0 {
  min-width: 16.5rem;
  width: auto;
  height: 5rem;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  line-height: 5rem;
  padding: 0 3.5rem 0 3.5rem;
  font-size: 1.5rem;
  background-color: black;
  color: white;
  text-transform: uppercase;
  font-family: 'Open Sans Condensed';
  font-weight: bolder;
  cursor: pointer;
  border: none;
  background-color: white;
  color: black;
  border: 2px solid black;
}

.c0:hover {
  background-color: white;
  color: black;
  border: 1px solid black;
}

.c0:hover {
  background-color: black;
  color: white;
}

<button
  class="c0"
>
  Test1
</button>
`;
